--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,11 @@ body {
 
 .jumbotron {
     color: #fff;
-    height: 450px;
+    height: 400px;
     background-image: url('../img/coding.jpg');
     background-attachment: fixed;
     background-size: cover;
+    overflow: hidden;
 }
 
 hr {
@@ -28,16 +29,34 @@ section {
     text-indent: 50px;
 }
 
+.pKiri, .pKanan {
+    opacity: 0;
+    transform: translate(-50px, 0);
+    transition: 1s;
+}
+
+.pKanan {
+    transform: translate(50px, 0);
+}
+
+.pKiri.pMuncul, .pKanan.pMuncul {
+    opacity: 1;
+    transform: translate(0,0);
+}
+
 .portfolio {
     background-color: #eee;
 }
 
 .portfolio .thumbnail {
     opacity: 0;
+    transition: .5s;
+    transform: translate(-50px, 0);
 }
 
 .portfolio .thumbnail.muncul {
     opacity: 1;
+    transform: translate(0,0);
 }
 
 .col-sm-4 {
